--- a/index.html
+++ b/index.html
@@ -15,39 +15,39 @@
                 <h1>Сергей Мелодин</h1>
                 <p>Писатель&nbsp;статей&nbsp;и&nbsp;кода; Инженер&nbsp;электрики&nbsp;и&nbsp;контента; Senior&nbsp;hexlet.io&nbsp;worker.</p>
                 <div class="list-group text-break pb-3">
-                    <a class="list-group-item list-group-item-action" href="mailto:samelodyn@gmail.com" target="_blank">
+                    <a class="list-group-item" href="mailto:samelodyn@gmail.com" target="_blank">
                         samelodyn@gmail.com
                         <img src="https://unpkg.com/simple-icons@5.2.0/icons/maildotru.svg" width="32" alt="Иконка электронной почты" class="ms-2">
                     </a>
-                    <a class="list-group-item list-group-item-action" href="https://ru.hexlet.io/u/melodyn" target="_blank">
+                    <a class="list-group-item" href="https://ru.hexlet.io/u/melodyn" target="_blank">
                         hexlet.io/u/melodyn
                         <img src="hexlet.svg" width="32" alt="Иконка Hexlet" class="ms-2">
                     </a>
-                    <a class="list-group-item list-group-item-action" href="https://github.com/melodyn" target="_blank">
+                    <a class="list-group-item" href="https://github.com/melodyn" target="_blank">
                         github.com/melodyn
                         <img src="https://unpkg.com/simple-icons@5.2.0/icons/github.svg" width="32" alt="Иконка Github" class="ms-2">
                     </a>
-                    <a class="list-group-item list-group-item-action" href="https://habr.com/users/melodyn" target="_blank">
+                    <a class="list-group-item" href="https://habr.com/users/melodyn" target="_blank">
                         habr.com/users/melodyn
                         <img src="habr.svg" width="32" alt="Иконка Хабр" class="ms-2">
                     </a>
-                    <a class="list-group-item list-group-item-action" href="https://youtube.com/channel/UC6W_u37pEhDonQu4O_6JOeQ" target="_blank">
+                    <a class="list-group-item" href="https://youtube.com/channel/UC6W_u37pEhDonQu4O_6JOeQ" target="_blank">
                         youtube.com
                         <img src="https://unpkg.com/simple-icons@5.2.0/icons/youtube.svg" width="32" alt="Иконка YouTube" class="ms-2">
                     </a>
-                    <a class="list-group-item list-group-item-action" href="https://vk.com/melodyn" target="_blank">
+                    <a class="list-group-item" href="https://vk.com/melodyn" target="_blank">
                         vk.com/melodyn
                         <img src="https://unpkg.com/simple-icons@5.2.0/icons/vk.svg" width="32" alt="Иконка ВКонтакте" class="ms-2">
                     </a>
-                    <a class="list-group-item list-group-item-action" href="https://instagram.com/melodynsa" target="_blank">
+                    <a class="list-group-item" href="https://instagram.com/melodynsa" target="_blank">
                         instagram.com/melodynsa
                         <img src="https://unpkg.com/simple-icons@5.2.0/icons/instagram.svg" width="32" alt="Иконка Instagram" class="ms-2">
                     </a>
-                    <a class="list-group-item list-group-item-action" href="https://facebook.com/samelodyn" target="_blank">
+                    <a class="list-group-item" href="https://facebook.com/samelodyn" target="_blank">
                         facebook.com/samelodyn
                         <img src="https://unpkg.com/simple-icons@5.2.0/icons/facebook.svg" width="32" alt="Иконка Facebook" class="ms-2">
                     </a>
-                    <a class="list-group-item list-group-item-action" href="https://twitter.com/samelodyn" target="_blank">
+                    <a class="list-group-item" href="https://twitter.com/samelodyn" target="_blank">
                         twitter.com/samelodyn
                         <img src="https://unpkg.com/simple-icons@5.2.0/icons/twitter.svg" width="32" alt="Иконка Twitter" class="ms-2">
                     </a>
