--- a/board.html
+++ b/board.html
@@ -44,10 +44,22 @@
             }))
         })()
 
-        Promise
+        Promise //f458dd88-fb6b-4540-9f61-8e88ce6f33c6
             .resolve(pendo.initialize({ visitor: { id: uuid() }, account: { id: uuid() }}))
             .then((res) => console.log('Pendo run', res))
             .catch(console.error);
+
+        (function reloadingGuide(dom) {
+            if(!pendo.designerEnabled) {
+                dom('._pendo-close-guide')[0].outerHTML = dom('._pendo-close-guide')[0].outerHTML; // remove direct event listener on close button
+
+                function dismissUntilReload() {
+                    // guide dismissed until reload, at which point it will no longer be in the payload
+                    pendo.onGuideDismissed({"until":"reload"});
+                }
+                pendo.attachEvent(dom('._pendo-close-guide')[0], 'click', dismissUntilReload);
+            }
+        })(pendo.dom);
     </script>
 </body>
 </html>
