--- a/board.html
+++ b/board.html
@@ -57,11 +57,14 @@
         }))
     })()
 
-    Promise//'f458dd88-fb6b-4540-9f61-8e88ce6f33c6'
-        .resolve(pendo.initialize({visitor: {id: 'f458dd88-fb6b-4540-9f61-8e88ce6f33c6'}}))
-        .then(() => pendo.showGuideById('FoGggz9g-b_Qfn9Q0Ydtt7gdwqQ'))
-        .then(console.log)
-        .catch(console.error);
+    pendo.initialize({visitor: {id: 'f458dd88-fb6b-4540-9f61-8e88ce6f33c6'}})
+    pendo.showGuideById('FoGggz9g-b_Qfn9Q0Ydtt7gdwqQ')
+
+    // Promise//'f458dd88-fb6b-4540-9f61-8e88ce6f33c6'
+    //     .resolve()
+    //     .then(() => pendo.showGuideById('FoGggz9g-b_Qfn9Q0Ydtt7gdwqQ'))
+    //     .then(console.log)
+    //     .catch(console.error);
 
 
 </script>
