--- a/board.html
+++ b/board.html
@@ -57,9 +57,10 @@
         }))
     })();
 
-    (async () => {
-        await pendo.initialize({visitor: {id: 'f458dd88-fb6b-4540-9f61-8e88ce6f33c6'}})
-        pendo.showGuideById('FoGggz9g-b_Qfn9Q0Ydtt7gdwqQ');
+    (() => {
+        pendo.initialize({visitor: {id: 'f458dd88-fb6b-4540-9f61-8e88ce6f33c6'}});
+        // showGuideById('FoGggz9g-b_Qfn9Q0Ydtt7gdwqQ')
+        setTimeout(() => console.log(pendo.isReady(), pendo.showGuideById('FoGggz9g-b_Qfn9Q0Ydtt7gdwqQ')), 5000);
     })();
 
     // Promise//'f458dd88-fb6b-4540-9f61-8e88ce6f33c6'
