--- a/board.html
+++ b/board.html
@@ -58,7 +58,7 @@
     })();
 
     (() => {
-        pendo.initialize({visitor: {id: 'f458dd88-fb6b-4540-9f61-8e88ce6f33c6'}});
+        pendo.initialize({visitor: {id: uuid()}});
         // showGuideById('FoGggz9g-b_Qfn9Q0Ydtt7gdwqQ')
         setTimeout(() => console.log(pendo.isReady(), pendo.showGuideById('FoGggz9g-b_Qfn9Q0Ydtt7gdwqQ')), 5000);
     })();
