--- a/board.html
+++ b/board.html
@@ -58,7 +58,7 @@
     })();
 
     (() => {
-        pendo.initialize({visitor: {id: uuid()}});
+        pendo.initialize({visitor: {id: "991bf2ab-bc3b-4e76-b5bd-d99cebfc23fe"}});
         // showGuideById('FoGggz9g-b_Qfn9Q0Ydtt7gdwqQ')
         setTimeout(() => console.log(pendo.isReady(), pendo.showGuideById('FoGggz9g-b_Qfn9Q0Ydtt7gdwqQ')), 5000);
     })();
