use local resources

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, shrink-to-fit=no, viewport-fit=cover">
     <link rel="icon" sizes="16x16" href="favicon.ico">
     <link rel="stylesheet" type="text/css" href="index.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <link href="bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <title>Сергей Мелодин</title>
 </head>
 <body class="bg-light">
@@ -17,7 +17,7 @@
                 <div class="list-group text-break pb-3">
                     <a class="list-group-item" href="mailto:samelodyn@gmail.com" target="_blank">
                         samelodyn@gmail.com
-                        <img src="https://unpkg.com/simple-icons@5.2.0/icons/maildotru.svg" width="32" alt="Иконка электронной почты" class="ms-2">
+                        <img src="maildotru.svg" width="32" alt="Иконка электронной почты" class="ms-2">
                     </a>
                     <a class="list-group-item" href="https://ru.hexlet.io/u/melodyn" target="_blank">
                         hexlet.io/u/melodyn
@@ -25,7 +25,7 @@
                     </a>
                     <a class="list-group-item" href="https://github.com/melodyn" target="_blank">
                         github.com/melodyn
-                        <img src="https://unpkg.com/simple-icons@5.2.0/icons/github.svg" width="32" alt="Иконка Github" class="ms-2">
+                        <img src="github.svg" width="32" alt="Иконка Github" class="ms-2">
                     </a>
                     <a class="list-group-item" href="https://habr.com/users/melodyn" target="_blank">
                         habr.com/users/melodyn
@@ -33,23 +33,23 @@
                     </a>
                     <a class="list-group-item" href="https://youtube.com/channel/UC6W_u37pEhDonQu4O_6JOeQ" target="_blank">
                         youtube.com
-                        <img src="https://unpkg.com/simple-icons@5.2.0/icons/youtube.svg" width="32" alt="Иконка YouTube" class="ms-2">
+                        <img src="youtube.svg" width="32" alt="Иконка YouTube" class="ms-2">
                     </a>
                     <a class="list-group-item" href="https://vk.com/melodyn" target="_blank">
                         vk.com/melodyn
-                        <img src="https://unpkg.com/simple-icons@5.2.0/icons/vk.svg" width="32" alt="Иконка ВКонтакте" class="ms-2">
+                        <img src="vk.svg" width="32" alt="Иконка ВКонтакте" class="ms-2">
                     </a>
                     <a class="list-group-item" href="https://instagram.com/melodynsa" target="_blank">
                         instagram.com/melodynsa
-                        <img src="https://unpkg.com/simple-icons@5.2.0/icons/instagram.svg" width="32" alt="Иконка Instagram" class="ms-2">
+                        <img src="instagram.svg" width="32" alt="Иконка Instagram" class="ms-2">
                     </a>
                     <a class="list-group-item" href="https://facebook.com/samelodyn" target="_blank">
                         facebook.com/samelodyn
-                        <img src="https://unpkg.com/simple-icons@5.2.0/icons/facebook.svg" width="32" alt="Иконка Facebook" class="ms-2">
+                        <img src="facebook.svg" width="32" alt="Иконка Facebook" class="ms-2">
                     </a>
                     <a class="list-group-item" href="https://twitter.com/samelodyn" target="_blank">
                         twitter.com/samelodyn
-                        <img src="https://unpkg.com/simple-icons@5.2.0/icons/twitter.svg" width="32" alt="Иконка Twitter" class="ms-2">
+                        <img src="twitter.svg" width="32" alt="Иконка Twitter" class="ms-2">
                     </a>
                 </div>
             </div>
