update youtube name

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
                         habr.com/users/melodyn
                         <img src="habr.svg" width="32" alt="Иконка Хабр" class="ms-2">
                     </a>
-                    <a class="list-group-item" href="https://youtube.com/channel/UC6W_u37pEhDonQu4O_6JOeQ" target="_blank">
-                        youtube.com
+                    <a class="list-group-item" href="https://youtube.com/@samelodyn" target="_blank">
+                        youtube.com/@samelodyn
                         <img src="youtube.svg" width="32" alt="Иконка YouTube" class="ms-2">
                     </a>
                     <a class="list-group-item" href="https://vk.com/melodyn" target="_blank">
