--- a/index.html
+++ b/index.html
@@ -13,15 +13,27 @@
         <div class="row row-cols-1 h-100">
             <div class="col align-self-center">
                 <h1>Сергей Мелодин</h1>
-                <p>Писатель&nbsp;статей&nbsp;и&nbsp;кода; Инженер&nbsp;электрики&nbsp;и&nbsp;контента; Senior&nbsp;hexlet.io&nbsp;worker.</p>
+                <p>Меняю мир к лучшему</p>
                 <div class="list-group text-break pb-3">
                     <a class="list-group-item" href="mailto:samelodyn@gmail.com" target="_blank">
                         samelodyn@gmail.com
                         <img src="maildotru.svg" width="32" alt="Иконка электронной почты" class="ms-2">
                     </a>
-                    <a class="list-group-item" href="https://ru.hexlet.io/u/melodyn" target="_blank">
-                        hexlet.io/u/melodyn
-                        <img src="hexlet.svg" width="32" alt="Иконка Hexlet" class="ms-2">
+                    <a class="list-group-item" href="https://t.me/melodynbot" target="_blank">
+                        @melodynbot
+                        <img src="telegram.svg" width="32" alt="Иконка Telegram" class="ms-2">
+                    </a>
+                    <a class="list-group-item" href="https://youtube.com/@samelodyn" target="_blank">
+                        youtube.com/@samelodyn
+                        <img src="youtube.svg" width="32" alt="Иконка YouTube" class="ms-2">
+                    </a>
+                    <a class="list-group-item" href="https://youtube.com/@samelodyn" target="_blank">
+                        youtube.com/@samelodyn
+                        <img src="youtube.svg" width="32" alt="Иконка YouTube" class="ms-2">
+                    </a>
+                    <a class="list-group-item" href="https://vk.com/melodyn" target="_blank">
+                        vk.com/melodyn
+                        <img src="vk.svg" width="32" alt="Иконка ВКонтакте" class="ms-2">
                     </a>
                     <a class="list-group-item" href="https://github.com/melodyn" target="_blank">
                         github.com/melodyn
@@ -31,13 +43,9 @@
                         habr.com/users/melodyn
                         <img src="habr.svg" width="32" alt="Иконка Хабр" class="ms-2">
                     </a>
-                    <a class="list-group-item" href="https://youtube.com/@samelodyn" target="_blank">
-                        youtube.com/@samelodyn
-                        <img src="youtube.svg" width="32" alt="Иконка YouTube" class="ms-2">
-                    </a>
-                    <a class="list-group-item" href="https://vk.com/melodyn" target="_blank">
-                        vk.com/melodyn
-                        <img src="vk.svg" width="32" alt="Иконка ВКонтакте" class="ms-2">
+                    <a class="list-group-item" href="https://ru.hexlet.io/u/melodyn" target="_blank">
+                        hexlet.io/u/melodyn
+                        <img src="hexlet.svg" width="32" alt="Иконка Hexlet" class="ms-2">
                     </a>
                     <a class="list-group-item" href="https://instagram.com/melodynsa" target="_blank">
                         instagram.com/melodynsa
