--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
                 <h1>Сергей Мелодин</h1>
                 <p>Меняю мир к лучшему</p>
                 <div class="list-group text-break pb-3">
+                    <a class="list-group-item" href="/resume.pdf" target="_blank">
+                        резюме
+                        <img src="favicon.ico" width="32" alt="Иконка резюме" class="ms-2">
+                    </a>
                     <a class="list-group-item" href="mailto:samelodyn@gmail.com" target="_blank">
                         samelodyn@gmail.com
                         <img src="maildotru.svg" width="32" alt="Иконка электронной почты" class="ms-2">
